# internet_shop

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: category.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
